--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ html, body {
 }
 
 .container {
-    width: 800px;
-    height: 800px;
+    width: 50vw;
+    height: 50vw;
     margin: 60px auto;
     border: 2px solid white;
     display: flex;
@@ -47,4 +47,11 @@ html, body {
 
 .hit {
     background-color: red !important;
+}
+
+#conteggi {
+    text-align: center;
+    color: white;
+    font-size: 30px;
+    margin-bottom: 100px;
 }
